--- a/Recube.Core/Recube.Core.csproj
+++ b/Recube.Core/Recube.Core.csproj
@@ -3,10 +3,27 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp3.0</TargetFramework>
-        <RootNamespace>Recube.Api</RootNamespace>
+        <RootNamespace>Recube.Core</RootNamespace>
         <LangVersion>8.0</LangVersion>
         <Nullable>enable</Nullable>
         <!-- <WarningsAsErrors>CS8600;CS8602;CS8603;CS8625;CS8618</WarningsAsErrors>-->
     </PropertyGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\Recube.Api\Recube.Api.csproj"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="DotNetty.Codecs" Version="0.6.0"/>
+        <PackageReference Include="DotNetty.Common" Version="0.6.0"/>
+        <PackageReference Include="DotNetty.Handlers" Version="0.6.0"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <None Remove="NLog.config"/>
+        <Content Include="NLog.config">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
+    </ItemGroup>
 
 </Project>
