--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ script:
   - dotnet build
 before_script:
   - npm install -g eclint
-  - eclint check "Recube.Api/**/*.cs" "Recube.Core/**/*.cs"
+  - eclint check "Recube.Api/**/*" "Recube.Core/**/*"
