Started to add BlockRegistry and added parser for blocks.json to get network ids for different block states

--- a/Recube.Core/Recube.Core.csproj
+++ b/Recube.Core/Recube.Core.csproj
@@ -24,6 +24,10 @@
         <Content Include="NLog.config">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </Content>
+        <None Remove="blocks.json"/>
+        <Content Include="blocks_1.14.4.json">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
     </ItemGroup>
 
 </Project>
