Fixed UUID Imports

--- a/Recube.Api/Recube.Api.csproj
+++ b/Recube.Api/Recube.Api.csproj
@@ -17,6 +17,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <Folder Include="Network\Entities"/>
         <Folder Include="Network\Impl\Packets\Play"/>
     </ItemGroup>
 </Project>
