--- a/Recube.Api/Recube.Api.csproj
+++ b/Recube.Api/Recube.Api.csproj
@@ -11,6 +11,7 @@
     <ItemGroup>
         <PackageReference Include="DotNetty.Buffers" Version="0.6.0" />
         <PackageReference Include="DotNetty.Transport" Version="0.6.0" />
+        <PackageReference Include="fNbt" Version="0.6.4"/>
         <PackageReference Include="Nett" Version="0.13.0" />
         <PackageReference Include="Newtonsoft.Json" Version="12.0.2"/>
         <PackageReference Include="NLog" Version="4.6.6" />
