--- a/.github/workflows/netcore.yml
+++ b/.github/workflows/netcore.yml
@@ -11,6 +11,6 @@ jobs:
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 3.0.0-preview8
+        dotnet-version: 3.0.100-preview8-013656
     - name: Build with dotnet
       run: dotnet build --configuration Release
