Started trying to send chunks...

--- a/Recube.Core/Recube.Core.csproj
+++ b/Recube.Core/Recube.Core.csproj
@@ -17,18 +17,18 @@
         <PackageReference Include="DotNetty.Codecs" Version="0.6.0" />
         <PackageReference Include="DotNetty.Common" Version="0.6.0" />
         <PackageReference Include="DotNetty.Handlers" Version="0.6.0" />
-        <PackageReference Include="fNbt" Version="0.6.4"/>
-        <PackageReference Include="Newtonsoft.Json" Version="12.0.2"/>
+        <PackageReference Include="fNbt" Version="0.6.4" />
+        <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     </ItemGroup>
 
     <ItemGroup>
         <None Remove="NLog.config" />
+        <Content Include="blocks_1.15.1.json">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
         <Content Include="NLog.config">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </Content>
-        <None Remove="blocks.json"/>
-        <Content Include="blocks_1.14.4.json">
-            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-        </Content>
+        <None Remove="blocks.json" />
     </ItemGroup>
 </Project>
