--- a/.github/workflows/netcore.yml
+++ b/.github/workflows/netcore.yml
@@ -16,7 +16,7 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.0.102
-    - name: Build with dotnet
+    - name: Run build
       run: dotnet build --configuration Release
-    - name: Test with dotnet
+    - name: Run tests
       run: dotnet test --configuration Release
