--- a/Recube.Api/Recube.Api.csproj
+++ b/Recube.Api/Recube.Api.csproj
@@ -11,7 +11,7 @@
     <ItemGroup>
         <PackageReference Include="DotNetty.Buffers" Version="0.6.0" />
         <PackageReference Include="DotNetty.Transport" Version="0.6.0" />
-        <PackageReference Include="fNbt" Version="0.6.5" />
+        <PackageReference Include="fNbt-recube" Version="0.7.0" />
         <PackageReference Include="Nett" Version="0.13.0" />
         <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
         <PackageReference Include="NLog" Version="4.6.8" />
