WIP: Fixed some BlockState bugs and begun to add some tests

--- a/Recube.Core.Tests/Recube.Core.Tests.csproj
+++ b/Recube.Core.Tests/Recube.Core.Tests.csproj
@@ -7,14 +7,21 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
-        <PackageReference Include="xunit" Version="2.4.1" />
-        <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
-        <PackageReference Include="coverlet.collector" Version="1.2.0" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0"/>
+        <PackageReference Include="xunit" Version="2.4.1"/>
+        <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1"/>
+        <PackageReference Include="coverlet.collector" Version="1.2.0"/>
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Recube.Core\Recube.Core.csproj" />
+        <ProjectReference Include="..\Recube.Core\Recube.Core.csproj"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <None Remove="Block\test_blocks.json"/>
+        <Content Include="Block\test_blocks.json">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
     </ItemGroup>
 
 </Project>
