Changed Logger Console target to "ColoredConsole" to support coloring

--- a/Recube.Core/NLog.config
+++ b/Recube.Core/NLog.config
@@ -3,7 +3,7 @@
 
     <targets>
         <target name="logfile" xsi:type="File" fileName="file.txt"/>
-        <target name="logconsole" xsi:type="Console"
+        <target name="logconsole" xsi:type="ColoredConsole"
                 layout="${date:format=dd.MM.yyyy HH\:mm\:ss} | ${level:uppercase=true:padding=6} | ${logger} | ${message}"/>
     </targets>
 
